fix alignments and settings page

--- a/UserSettings.style.css
+++ b/UserSettings.style.css
@@ -4,6 +4,10 @@
     left: 0;
     overflow: hidden;
     container-type: inline-size;
+    position: fixed;
+    inset: 0;
+    z-index: 2;
+    background-color: var(--SmartThemeChatTintColor);
     &.csss--active {
         display: block;
     }
